--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ subprojects {
     repositories {
       maven {
         name = "GitHubPackages"
-        url = uri("https://maven.pkg.github.com/lcavadas/apized")
+        url = uri("https://maven.pkg.github.com/apized/apized")
         credentials {
           username = System.getenv("GITHUB_ACTOR")
           password = System.getenv("GITHUB_TOKEN")
