--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ version=0.0.1-SNAPSHOT
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
 micronautVersion=3.5.1
+release.useAutomaticVersion=true
