--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,5 +1,16 @@
 name: CI/CD
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
+    tags-ignore:
+      - '*.*.*'
+  create:
+    branches:
+      - main
+      - 'release-*'
+    tags:
+      - '*.*.*'
 
 jobs:
   test:
@@ -15,9 +26,6 @@ jobs:
           distribution: 'adopt'
       - name: Run tests
         run: ./gradlew clean test
-        env:
-          GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish:
     needs: test
@@ -31,8 +39,27 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: Publish
+      - name: Publish jars
         run: ./gradlew clean publish
         env:
           GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  gradle:
+    needs: test
+    if: startsWith(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Publish plugin
+        run: ./gradlew clean publishPlugins
+        env:
+          GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
+          GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
