--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ plugins {
 subprojects {
   apply plugin: 'groovy'
   apply plugin: 'java-library'
-  apply plugin: 'maven-publish'
 
   ext['groovy.version'] = '3.0.9'
 
@@ -26,21 +25,25 @@ subprojects {
     withSourcesJar()
   }
 
-  publishing {
-    repositories {
-      maven {
-        name = "GitHubPackages"
-        url = uri("https://maven.pkg.github.com/apized/apized")
-        credentials {
-          username = System.getenv("GITHUB_ACTOR")
-          password = System.getenv("GITHUB_TOKEN")
-        }
+  if (it.name != 'gradle-micronaut') {
+    apply plugin: 'maven-publish'
 
+    publishing {
+      repositories {
+        maven {
+          name = "GitHubPackages"
+          url = uri("https://maven.pkg.github.com/apized/apized")
+          credentials {
+            username = System.getenv("GITHUB_ACTOR")
+            password = System.getenv("GITHUB_TOKEN")
+          }
+
+        }
       }
-    }
-    publications {
-      maven(MavenPublication) {
-        from components.java
+      publications {
+        maven(MavenPublication) {
+          from components.java
+        }
       }
     }
   }
