--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 
 group=org.apized
-version=0.0.7
+version=0.0.8-SNAPSHOT
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
 micronautVersion=3.5.1
