Fixes from using this against a real example

--- a/micronaut/build.gradle
+++ b/micronaut/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 
   compileOnly("org.projectlombok:lombok")
   compileOnly("io.micronaut.data:micronaut-data-model")
+  compileOnly("io.micronaut.data:micronaut-data-runtime")
   compileOnly("io.micronaut.serde:micronaut-serde-jackson:1.1.0")
   compileOnly("io.micronaut:micronaut-http-server")
 
