--- a/micronaut/build.gradle
+++ b/micronaut/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id "io.micronaut.library" version "3.4.1"
+  id "io.micronaut.library" version "${micronautVersion}"
 }
 
 dependencies {
