Separating the micronautVersion from the micronautGradlePluginVersion

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id "io.micronaut.library" version "${micronautVersion}"
+  id "io.micronaut.library" version "${micronautGradlePluginVersion}"
 }
 
 dependencies {
