--- a/gradle-micronaut/build.gradle
+++ b/gradle-micronaut/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 dependencies {
-  api "io.micronaut.gradle:micronaut-gradle-plugin:${project.micronautVersion}"
+  api "io.micronaut.gradle:micronaut-gradle-plugin:${project.micronautGradlePluginVersion}"
 }
 
 pluginBundle {
