--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,6 @@ group=org.apized
 version=0.0.15-SNAPSHOT
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
-micronautVersion=3.5.1
+micronautGradlePluginVersion=3.5.3
+micronautVersion=3.5.3
 release.useAutomaticVersion=true
