--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
   api project(":core")
 
-  compileOnly "jakarta.transaction:jakarta.transaction-api:1.3.3"
+//  compileOnly "jakarta.transaction:jakarta.transaction-api:1.3.3"
 
   api "org.codehaus.groovy:groovy-all:3.0.9"
   api("org.spockframework:spock-core:2.1-groovy-3.0")
