--- a/micronaut-gradle/build.gradle
+++ b/micronaut-gradle/build.gradle
@@ -19,15 +19,15 @@ pluginBundle {
 
 gradlePlugin {
   repositories {
-    maven {
-      name = "GitHubPackages"
-      url = uri("https://maven.pkg.github.com/apized/apized")
-      credentials {
-        username = System.getenv("GITHUB_ACTOR")
-        password = System.getenv("GITHUB_TOKEN")
-      }
-
-    }
+//    maven {
+//      name = "GitHubPackages"
+//      url = uri("https://maven.pkg.github.com/apized/apized")
+//      credentials {
+//        username = System.getenv("GITHUB_ACTOR")
+//        password = System.getenv("GITHUB_TOKEN")
+//      }
+//
+//    }
   }
   plugins {
     apizedProjectPlugin {
