Trying to fix the double release to github

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ subprojects {
     withSourcesJar()
   }
 
-  if (it.name != 'gradle-micronaut') {
+  if (it.name != 'micronaut-gradle-plugin') {
     apply plugin: 'maven-publish'
 
     publishing {
