--- a/micronaut-sample-server/build.gradle
+++ b/micronaut-sample-server/build.gradle
@@ -4,8 +4,30 @@ plugins {
 }
 
 repositories {
+  maven {
+    url 'libs'
+  }
   mavenLocal()
   mavenCentral()
+}
+
+configurations.all {
+  resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+    if (details.requested.name == 'micronaut-inject') {
+      details.useVersion '4.0.0-SNAPSHOT'
+      details.because 'Properties annotated with JPA transient should not be excluded from introspections by default'
+    }
+
+    if (details.requested.group == 'io.micronaut.data') {
+      details.useVersion '3.8.1-SNAPSHOT'
+      details.because 'Properties annotated with JPA transient should not be excluded from introspections by default'
+    }
+
+    if (['micronaut-data-tx'].contains(details.requested.name)) {
+      details.useVersion '3.4.3'
+      details.because "Properties annotated with JPA transient should not be excluded from introspections by default"
+    }
+  }
 }
 
 dependencies {
