Properly supporting DB other than Postgres

--- a/micronaut-gradle-plugin/build.gradle
+++ b/micronaut-gradle-plugin/build.gradle
@@ -8,6 +8,7 @@ repositories {
 }
 
 dependencies {
+  implementation project(":core")
   api "io.micronaut.gradle:micronaut-gradle-plugin:${project.micronautGradlePluginVersion}"
 }
 
