--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,14 +1,18 @@
 dependencies {
   api project(":core")
 
-//  compileOnly "jakarta.transaction:jakarta.transaction-api:1.3.3"
-
-  api "org.codehaus.groovy:groovy-all:3.0.9"
-  api("org.spockframework:spock-core:2.1-groovy-3.0")
+  api 'org.codehaus.groovy:groovy-all:3.0.9'
+  api 'org.spockframework:spock-core:2.1-groovy-3.0'
   api 'io.cucumber:cucumber-java:7.3.3'
   api 'io.cucumber:cucumber-junit:7.3.3'
   api 'io.rest-assured:rest-assured:4.5.0'
-  api 'org.testcontainers:postgresql:1.17.2'
+
+  api 'org.testcontainers:mysql:1.17.4'
+  api 'org.testcontainers:postgresql:1.17.4'
+  api 'org.testcontainers:oracle-xe:1.17.4'
+  api 'io.micronaut.testresources:micronaut-test-resources-jdbc-oracle-xe:1.0.1'
+  api 'org.testcontainers:mssqlserver:1.17.4'
+  api 'io.micronaut.testresources:micronaut-test-resources-jdbc-mssql:1.0.1'
 
   runtimeOnly 'org.junit.jupiter:junit-jupiter:5.8.2'
   runtimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.2'
