--- a/micronaut-sample-server/apized.properties
+++ b/micronaut-sample-server/apized.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 #
 # Copyright 2022 original authors
 #
@@ -15,3 +16,4 @@
 #
 
 dialect=POSTGRES
+security=bearerAuth
