--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 
 group=org.apized
-version=0.1.47-SNAPSHOT
+version=0.1.47
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
 micronautGradlePluginVersion=3.5.3
