--- a/micronaut-gradle-plugin/build.gradle
+++ b/micronaut-gradle-plugin/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id 'com.gradle.plugin-publish' version '1.0.0'
+  id 'com.gradle.plugin-publish' version '1.2.0'
 }
 
 repositories {
@@ -11,13 +11,9 @@ dependencies {
   api "io.micronaut.gradle:micronaut-gradle-plugin:${project.micronautGradlePluginVersion}"
 }
 
-pluginBundle {
+gradlePlugin {
   website = 'https://apized.org/'
   vcsUrl = 'https://github.com/apized/apized'
-  tags = [ 'apized' ]
-}
-
-gradlePlugin {
   repositories {
     maven {
       name = "GitHubPackages"
@@ -26,7 +22,6 @@ gradlePlugin {
         username = System.getenv("GITHUB_ACTOR")
         password = System.getenv("GITHUB_TOKEN")
       }
-
     }
   }
   plugins {
@@ -35,11 +30,12 @@ gradlePlugin {
       displayName = 'Apized Plugin'
       description = 'Gradle plugin to develop servers using apized'
       implementationClass = 'org.apized.gradle.ApizedPlugin'
+      tags.set(List.of('apized'))
     }
   }
 }
 
-task generateResources {
+tasks.register('generateResources') {
   ext {
     propFile = file("$buildDir/generated/apized.properties")
   }
