--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,7 +25,7 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: Run tests
-        run: ./gradlew clean test
+        run: ./gradlew clean :micronaut-sample-server:test
 
   publish:
     needs: test
