Adaptation for micronaut 4.0.x

--- a/micronaut-sample-server/build.gradle
+++ b/micronaut-sample-server/build.gradle
@@ -13,6 +13,7 @@ dependencies {
   compileOnly('org.projectlombok:lombok')
 
   project.getDependencies().add("annotationProcessor", "io.micronaut:micronaut-http-validation");
+  project.getDependencies().add("annotationProcessor", "io.micronaut.validation:micronaut-validation-processor");
   project.getDependencies().add("annotationProcessor", "io.micronaut.data:micronaut-data-processor");
   project.getDependencies().add("annotationProcessor", "io.micronaut.serde:micronaut-serde-processor");
 
