--- a/micronaut-core/build.gradle
+++ b/micronaut-core/build.gradle
@@ -11,6 +11,7 @@ dependencies {
   api("io.micronaut.serde:micronaut-serde-jackson")
   api("io.micronaut:micronaut-http-client")
   api("io.micronaut.validation:micronaut-validation")
+  api("jakarta.validation:jakarta.validation-api")
   api("io.micronaut:micronaut-runtime")
   api("io.swagger.core.v3:swagger-annotations")
 
