--- a/micronaut-core/build.gradle
+++ b/micronaut-core/build.gradle
@@ -9,6 +9,7 @@ dependencies {
   api(project(":core"))
   api('jakarta.persistence:jakarta.persistence-api:3.1.0')
   api("io.micronaut.serde:micronaut-serde-jackson")
+  api("io.micronaut:micronaut-jackson-databind")
   api("io.micronaut:micronaut-http-client")
   api("io.micronaut.validation:micronaut-validation")
   api("jakarta.validation:jakarta.validation-api")
