--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 
 group=org.apized
-version=0.2.8-SNAPSHOT
+version=0.2.8
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
 micronautGradlePluginVersion=4.0.1
