[Gradle Release Plugin] - new version commit:  '0.2.12-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 
 group=org.apized
-version=0.2.11
+version=0.2.12-SNAPSHOT
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
 micronautGradlePluginVersion=4.0.1
