Fixing the tracing graalvm config

--- a/micronaut-tracing/src/main/resources/META-INF/native-image/com.almedina.apized/reflect-config.json
+++ b/micronaut-tracing/src/main/resources/META-INF/native-image/com.almedina.apized/reflect-config.json
@@ -6,5 +6,9 @@
         "name": "delegate"
       }
     ]
+  },
+  {
+    "name":"org.apized.micronaut.tracing.OpenTelemetryAppender",
+    "allDeclaredConstructors": true
   }
 ]
