Resolving issues with native builds

--- a/micronaut-core/src/main/resources/META-INF/native-image/com.almedina.apized/native-image.properties
+++ b/micronaut-core/src/main/resources/META-INF/native-image/com.almedina.apized/native-image.properties
@@ -14,4 +14,4 @@
 # limitations under the License.
 #
 
-Args = --initialize-at-run-time=org.apized.micronaut.server.mvc.RepositoryHelper,
+Args =  --initialize-at-build-time=kotlin.coroutines.intrinsics.CoroutineSingletons --initialize-at-run-time=org.apized.micronaut.server.mvc.RepositoryHelper
