[Gradle Release Plugin] - new version commit:  '0.3.30-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 
 group=org.apized
-version=0.3.29
+version=0.3.30-SNAPSHOT
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
 micronautGradlePluginVersion=4.3.4
