--- a/micronaut-sample-server/build.gradle
+++ b/micronaut-sample-server/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
   runtimeOnly("io.micronaut.flyway:micronaut-flyway")
   runtimeOnly("ch.qos.logback:logback-classic")
-  testRuntimeOnly("ch.qos.logback:logback-classic:1.3.3")
+  testRuntimeOnly("ch.qos.logback:logback-classic")
 }
 
 application {
