Fixing the reflect-config.json to reflect the new ApizedServerFilter

--- a/micronaut-core/src/main/resources/META-INF/native-image/com.almedina.apized/reflect-config.json
+++ b/micronaut-core/src/main/resources/META-INF/native-image/com.almedina.apized/reflect-config.json
@@ -4,7 +4,7 @@
     "allPublicMethods" : true
   },
   {
-    "name": "org.apized.micronaut.core.ApizedHttpServerFilter",
+    "name": "org.apized.micronaut.core.ApizedServerFilter",
     "allDeclaredFields" : true
   }
 ]
