[Gradle Release Plugin] - new version commit:  '0.4.3-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 
 group=org.apized
-version=0.4.2
+version=0.4.3-SNAPSHOT
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
 micronautGradlePluginVersion=4.4.0
