[skip ci] [Gradle Release Plugin] - pre tag commit:  '1.1.0'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 
 group=org.apized
-version=1.1.0-SNAPSHOT
+version=1.1.0
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
 micronautGradlePluginVersion=4.4.2
