--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,6 +10,7 @@ dependencies {
   compileOnly("org.slf4j:slf4j-api:1.7.25")
   compileOnly("io.micronaut:micronaut-inject")
   compileOnly("io.micronaut.data:micronaut-data-model")
+  compileOnly("io.micronaut.serde:micronaut-serde-api")
   compileOnly("jakarta.persistence:jakarta.persistence-api:3.0.0")
   compileOnly("com.fasterxml.jackson.core:jackson-annotations:2.13.2")
   compileOnly("jakarta.inject:jakarta.inject-api:2.0.1")
