--- a/test/build.gradle
+++ b/test/build.gradle
@@ -5,8 +5,8 @@ dependencies {
   api 'org.apache.groovy:groovy'
   api 'org.apache.groovy:groovy-templates'
   api 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
-  api 'io.cucumber:cucumber-java:7.18.0'
-  api 'io.cucumber:cucumber-junit:7.18.0'
+  api 'io.cucumber:cucumber-java:7.18.1'
+  api 'io.cucumber:cucumber-junit:7.18.1'
   api 'io.rest-assured:rest-assured'
 
   api "org.testcontainers:mysql"
@@ -16,6 +16,6 @@ dependencies {
   api 'org.testcontainers:mssqlserver'
   api 'io.micronaut.testresources:micronaut-test-resources-jdbc-mssql'
 
-  runtimeOnly 'org.junit.jupiter:junit-jupiter'
-  runtimeOnly 'org.junit.vintage:junit-vintage-engine'
+//  runtimeOnly 'org.junit.jupiter:junit-jupiter'
+//  runtimeOnly 'org.junit.vintage:junit-vintage-engine'
 }
