--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 
 group=org.apized
-version=1.1.1
+version=1.1.2-SNAPSHOT
 # Disable the daemon because we're also compiling an annotationProcessor
 org.gradle.daemon=false
 micronautGradlePluginVersion=4.4.2
