--- a/distributed-lock/build.gradle
+++ b/distributed-lock/build.gradle
@@ -4,11 +4,7 @@ plugins {
 
 dependencies {
   compileOnly project(":micronaut:micronaut-core")
-
-  api project(":distributed-lock")
-  api('net.javacrumbs.shedlock:shedlock-provider-jdbc-micronaut:4.42.0') {
-    exclude group: 'org.yaml', module: 'snakeyaml'
-  }
+  compileOnly 'net.javacrumbs.shedlock:shedlock-core:4.42.0'
 
   compileOnly "ch.qos.logback:logback-classic"
 }
