--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,6 @@ pluginManagement {
   }
 }
 rootProject.name = "apized"
-include 'core', 'test',
+include 'core', 'test', 'distributed-lock',
   'micronaut:micronaut-core','micronaut:micronaut-test', 'micronaut:micronaut-gradle-plugin', 'micronaut:micronaut-distributed-lock', 'micronaut:micronaut-messaging-rabbitmq', 'micronaut:micronaut-sample-server', 'micronaut:micronaut-tracing', 'micronaut:micronaut-metrics',
   'spring:spring-core', 'spring:spring-test', 'spring:spring-gradle-plugin', 'spring:spring-distributed-lock', 'spring:spring-sample-server'
