--- a/spring/spring-sample-server/build.gradle
+++ b/spring/spring-sample-server/build.gradle
@@ -19,7 +19,9 @@ dependencies {
 
   annotationProcessor(project(":spring:spring-core"))
   implementation(project(":spring:spring-core"))
+//  implementation(project(":spring:spring-tracing"))
 
+  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
   runtimeOnly "org.postgresql:postgresql"
   runtimeOnly "org.flywaydb:flyway-database-postgresql"
