--- a/spring/spring-sample-server/src/main/resources/application.yml
+++ b/spring/spring-sample-server/src/main/resources/application.yml
@@ -4,8 +4,12 @@ server:
 management:
   endpoint:
     health:
-      show-components: always
       show-details: always
+
+  endpoints:
+    web:
+      exposure:
+        include: health
 
   server:
     port: ${MANAGEMENT_PORT:8080}
@@ -27,6 +31,16 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+otel:
+  exporter:
+    otlp:
+      endpoint: ${OTEL_COLLECTOR_ENDPOINT:http://localhost:4317}
+      protocol: ${OTEL_PROTOCOL:grpc}
+  sdk:
+    disabled: ${OTEL_DISABLED:false}
+  propagators:
+    - tracecontext
 
 apized:
   slug: server
