--- a/spring/spring-test/build.gradle
+++ b/spring/spring-test/build.gradle
@@ -1,15 +1,14 @@
 plugins {
-  id "org.springframework.boot" version "${springBootGradlePluginVersion}"
   id "io.spring.dependency-management" version "${springDependencyGradlePluginVersion}"
+}
+
+dependencyManagement {
+  imports {
+    mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootGradlePluginVersion}"
+  }
 }
 
 dependencies {
   compileOnly project(":spring:spring-core")
   api project(":test")
-
-//  api "io.micronaut:micronaut-inject-groovy"
-//  api "org.junit.jupiter:junit-jupiter-api"
-//  api "io.micronaut:micronaut-context"
-//  api "io.micronaut.test:micronaut-test-junit5"
-//  api "io.micronaut:micronaut-http-server-netty"
 }
