--- a/micronaut/micronaut-gradle-plugin/build.gradle
+++ b/micronaut/micronaut-gradle-plugin/build.gradle
@@ -29,7 +29,7 @@ gradlePlugin {
       id = 'org.apized.micronaut'
       displayName = 'Apized Plugin'
       description = 'Gradle plugin to develop servers using apized'
-      implementationClass = 'org.apized.gradle.ApizedPlugin'
+      implementationClass = 'org.apized.gradle.ApizedMicronautPlugin'
       tags.set(List.of('apized'))
     }
   }
