--- a/spring/spring-gradle-plugin/build.gradle
+++ b/spring/spring-gradle-plugin/build.gradle
@@ -30,8 +30,23 @@ gradlePlugin {
       id = 'org.apized.spring'
       displayName = 'Apized Spring Plugin'
       description = 'Gradle plugin to develop servers using apized'
-      implementationClass = 'org.apized.gradle.ApizedPlugin'
+      implementationClass = 'org.apized.gradle.ApizedSpringPlugin'
       tags.set(List.of('apized'))
     }
   }
+}
+
+tasks.register('generateResources') {
+  ext {
+    propFile = file("$buildDir/generated/apized.properties")
+  }
+  outputs.file propFile
+  doLast {
+    mkdir propFile.parentFile
+    propFile.text = "version=$project.version\nmicronautVersion=$project.micronautVersion"
+  }
+}
+
+processResources {
+  from files(generateResources)
 }
