--- a/distributed-lock/build.gradle
+++ b/distributed-lock/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-  compileOnly project(":micronaut:micronaut-core")
+  compileOnly project(":core")
   compileOnly 'net.javacrumbs.shedlock:shedlock-core:4.42.0'
 
   compileOnly "ch.qos.logback:logback-classic"
