--- a/spring/spring-core/build.gradle
+++ b/spring/spring-core/build.gradle
@@ -20,10 +20,25 @@ dependencies {
   api("org.springframework.boot:spring-boot-starter-actuator")
   api("io.swagger.core.v3:swagger-annotations:2.2.23")
 
-  api 'org.flywaydb:flyway-core:8.5.2'
+  api 'org.flywaydb:flyway-core'
   api('io.hypersistence:hypersistence-utils-hibernate-63:3.8.2')
 
   implementation("org.apache.velocity:velocity-engine-core:2.4")
 
   compileOnly("org.projectlombok:lombok:1.18.30")
+
+  testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+  testAnnotationProcessor project(':spring:spring-core')
+  testAnnotationProcessor 'io.micronaut:micronaut-inject-java'
+  testAnnotationProcessor 'io.micronaut.serde:micronaut-serde-processor:2.11.0'
+
+  testCompileOnly 'org.projectlombok:lombok:1.18.30'
+  testRuntimeOnly 'org.postgresql:postgresql'
+  testRuntimeOnly 'org.flywaydb:flyway-database-postgresql'
+  testRuntimeOnly "io.micronaut:micronaut-aop:${micronautVersion}"
+  testImplementation project(":spring:spring-test")
+}
+
+tasks.withType(Test).configureEach {
+  environment 'SPRING_MAIN_CLASS', 'org.apized.spring.server.Application'
 }
